--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <ul>
             <li><a href="#"><img src="assets/pasionxdeporte.png" alt="" width="50em"></a></li>
             <li><a href="#">Nuestro equipo</a></li>
-            <li><a href="#">Contacto</a></li>
+            <li><a href="#opciones">Contacto</a></li>
         </ul>
 
         <!-- Un formulario de búsqueda es una forma no-lineal de hacer búsquedas en un sitio web. -->
@@ -43,65 +43,59 @@
             <h2>Pasioin X el Deporte</h2>
 
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Donec a diam
-                lectus. Set sit amet ipsum mauris. Maecenas congue ligula as quam
-                viverra nec consectetur ant hendrerit. Donec et mollis dolor. Praesent
-                et diam eget libero egestas mattis sit amet vitae augue. Nam tincidunt
-                congue enim, ut porta lorem lacinia consectetur.
+                Pasion por el deporte es un proyecto de periodismo y fotografia deportiva, que tiene el fin de acompañar
+                y mostrasr a los deportistas de la zona.
             </p>
 
-            <h3>Voley</h3>
+            <h3 id="voley">Voley</h3>
 
-            <p>
-                Donec ut librero sed accu vehicula ultricies a non tortor. Lorem ipsum
-                dolor sit amet, consectetur adipisicing elit. Aenean ut gravida lorem.
-                Ut turpis felis, pulvinar a semper sed, adipiscing id dolor.
-            </p>
+            <ul class="lista">
+                <li> <a class="boton"> <img src="assets/voley1.jpg" alt="" width="700px"> <br> Nacional Masculino </a> </li>
+                <li> <a class="boton"> <img src="assets/Voley3.jpg" alt="" width="700px"> <br> Nacional Femenino </a> </li>
+                <li> <a class="boton"> <img src="assets/Voley4.jpg" alt="" width="700px"> <br> Liga Sub16 </a> </li>
+            </ul>
+            </ul>
 
-            <h3>Handball</h3>
+            <h3 id="handball">Handball</h3>
 
-            <p>
-                Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum
-                soclis natoque penatibus et manis dis parturient montes, nascetur
-                ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem
-                facilisis semper ac in est.
-            </p>
-            <h3>Hockey</h3>
+            <ul class="lista">
+                <li> <a class="boton"> <img src="assets/handball1.jpg" alt="" width="700px"> <br> Nacional Masculino </a> </li>
+                <li> <a class="boton"> <img src="assets/handball3.jpg" alt="" width="700px"> <br> Nacional Femenino </a> </li>
+            </ul>
 
-            <p>
-                Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum
-                soclis natoque penatibus et manis dis parturient montes, nascetur
-                ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem
-                facilisis semper ac in est.
-            <p>
-            <h3>Patin</h3>
+            <h3 id="hockey">Hockey</h3>
 
-            <p>
-                Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum
-                soclis natoque penatibus et manis dis parturient montes, nascetur
-                ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem
-                facilisis semper ac in est.
-            <p>
-            <h3>Ji Jistsu</h3>
+            <ul class="lista">
+                <li> <a class="boton"> <img src="assets/hockey1.jpg" alt="" width="700px"> <br> Nacional Masculino </a> </li>
+                <li> <a class="boton"> <img src="assets/hockey2.jpg" alt="" width="700px"> <br> Nacional Femenino </a> </li>
+            </ul>
 
-            <p>
-                Donec viverra mi quis quam pulvinar at malesuada arcu rhoncus. Cum
-                soclis natoque penatibus et manis dis parturient montes, nascetur
-                ridiculus mus. In rutrum accumsan ultricies. Mauris vitae nisi at sem
-                facilisis semper ac in est.
-            <p>
+            <h3 id="patin">Patin</h3>
+
+            <ul class="lista">
+                <li> <a class="boton"> <img src="assets/Patin1.jpg" alt="" width="700px"> <br> Competencia Artistica </a> </li>
+                <li> <a class="boton"> <img src="assets/patin2.jpg" alt="" width="700px"> <br> Carrera Regional </a> </li>
+            </ul>
+
+            <h3 id="jiujitsu">Jiu Jistsu</h3>
+
+            <ul class="lista">
+                <li> <a class="boton"> <img src="assets/jiujitsu1.jpg" alt="" width="700px"> <br> Open mat Mayores </a> </li>
+                <li> <a class="boton"> <img src="assets/jiujitsu2.jpg" alt="" width="700px"> <br> Open Mat niños </a> </li>
+            </ul>
+
         </article>
 
         <!-- el contenido aparte también se puede anidar dentro del contenido principal -->
         <aside>
             <h2>Deportes</h2>
 
-            <ul id="lista">
-                <li><a class="boton"href="#">Voley</a></li>
-                <li><a class="boton" href="#">Handball</a></li>
-                <li><a class="boton" href="#">Hockey</a></li>
-                <li><a class="boton" href="#">Patin</a></li>
-                <li><a class="boton" href="#">Jiu Jistsu</a></li>
+            <ul class="lista">
+                <li><a class="boton" href="#voley">Voley</a></li>
+                <li><a class="boton" href="#handball">Handball</a></li>
+                <li><a class="boton" href="#hockey">Hockey</a></li>
+                <li><a class="boton" href="#patin">Patin</a></li>
+                <li><a class="boton" href="#jiujitsu">Jiu Jistsu</a></li>
             </ul>
         </aside>
     </main>
@@ -111,7 +105,7 @@
     <footer>
         <p>©Copyright 2023 de juli. Todos los derechos revertidos.</p>
         <ul id="opciones">
-            <li><a href="h"><img src="assets/instagram.png" alt="instagram" width="30em"> </a></li>
+            <li><a href="https://www.instagram.com/pasionxdeporte23/"><img src="assets/instagram.png" alt="instagram" width="30em"> </a></li>
             <li><a href="h"><img src="assets/facebook.png" alt="instagram" width="30em"></a></li>
             <li><a href="h"><img src="assets/whatsapp.png" alt="instagram" width="30em"></a></li>
 
